Issue #0300: aceEditor visible

--- a/DSLAMAll/DSLAMFront/src/main/webapp/css/DSLAMDesktopModule.css
+++ b/DSLAMAll/DSLAMFront/src/main/webapp/css/DSLAMDesktopModule.css
@@ -1,3 +1,7 @@
+/**************************************
+*			PROJECTS
+***************************************/
+
 .dslam_studio-projectsView {
 	height: 100%;
 	position: relative;
@@ -9,6 +13,14 @@
 	width: 100%;
 	bottom: 0px;
 	height: auto;
+}
+
+.dslam_studio-projectConfigureZone {
+	height: 100%;
+}
+
+.dslam_studio-projectConfigureDeckPanel {
+	height: 100%;
 }
 
 .nav-list {
